--- a/www/views/home.html
+++ b/www/views/home.html
@@ -9,6 +9,12 @@
         Click Here to Scan
       </div>
 
+      <a href="#/products">
+        <div id="productsButton">
+          View Products
+        </div>
+      </a>
+
 
   </ion-content>
 </ion-view>
