--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,6 +2,16 @@
 #scanButton {
   background:blue;
   display:table;
-  margin:40% auto;padding:10px;
+  margin:40% auto;
+  padding:10px;
   color:white
+}
+
+#productsButton {
+  background:orange;
+  display:table;
+  margin:40% auto;
+  padding:10px;
+  color:white;
+  text-decoration: none;
 }
