--- a/www/views/products.html
+++ b/www/views/products.html
@@ -1,7 +1,16 @@
 <ion-view>
   <ion-content>
 
-    <h1>Products View</h1>
+    <h1 id="productsHeader">Products View</h1>
+
+    <!-- <div class="productCard" ng-repeat="product in inventory | filter: queryInventory" id="{{$id}}"> -->
+    <div class="productCard" ng-repeat="product in inventory">
+      <p class="productName">Product Name: {{product.productName}}</p>
+      <p class="productUnits">Number of units: {{product.quantity}}</p>
+      <p class="productBarcode">Product barcode: {{product.barcode}}</p>
+    </div>
+
+<!-- <p>{{inventory}}</p> -->
 
 
   </ion-content>
