Renamed ios build to myScan

--- a/www/views/products.html
+++ b/www/views/products.html
@@ -3,8 +3,9 @@
 
     <h1 id="productsHeader">Products View</h1>
 
-    <!-- <div class="productCard" ng-repeat="product in inventory | filter: queryInventory" id="{{$id}}"> -->
-    <div class="productCard" ng-repeat="product in inventory">
+    <input type="text" id="inventorySearch" placeholder="Search inventory" ng-model="queryInventory">
+
+    <div class="productCard" ng-repeat="product in inventory | filter: queryInventory" id="{{$id}}">
       <p class="productName">Product Name: {{product.productName}}</p>
       <p class="productUnits">Number of units: {{product.quantity}}</p>
       <p class="productBarcode">Product barcode: {{product.barcode}}</p>
