--- a/www/views/home.html
+++ b/www/views/home.html
@@ -1,16 +1,16 @@
-<ion-view>
+<ion-view view-title="Home">
   <ion-content>
 
-      <div id="scanButton" ng-click='scan()'>
-        Click Here to Scan
-      </div>
-
-      <a href="#/products">
-        <div id="productsButton">
-          View Products
+        <div id="scanButton" ng-click='scan()'>
+          Click Here to Scan
         </div>
-      </a>
+
+        <a href="#/products">
+          <div id="productsButton">
+            View Products
+          </div>
+        </a>
 
 
-  </ion-content>
+    </ion-content>
 </ion-view>
