--- a/www/views/products.html
+++ b/www/views/products.html
@@ -1,17 +1,17 @@
-<ion-view>
+<ion-view view-title="Products">
   <ion-content>
 
-    <h1 id="productsHeader">Products View</h1>
+      <h1 id="productsHeader">Products View</h1>
 
-    <input type="text" id="inventorySearch" placeholder="Search inventory" ng-model="queryInventory">
+      <input type="text" id="inventorySearch" placeholder="Search inventory" ng-model="queryInventory">
 
-    <div class="productCard" ng-repeat="product in inventory | filter: queryInventory" id="{{$id}}">
-      <p class="productName">Product Name: {{product.productName}}</p>
-      <p class="productUnits">Number of units: {{product.quantity}}</p>
-      <p class="productBarcode">Product barcode: {{product.barcode}}</p>
-    </div>
+      <div class="productCard" ng-repeat="product in inventory | filter: queryInventory" id="{{$id}}">
+        <p class="productName">Product Name: {{product.productName}}</p>
+        <p class="productUnits">Number of units: {{product.quantity}}</p>
+        <p class="productBarcode">Product barcode: {{product.barcode}}</p>
+      </div>
 
-<!-- <p>{{inventory}}</p> -->
+  <!-- <p>{{inventory}}</p> -->
 
 
   </ion-content>
