Add product implemented

--- a/www/views/home.html
+++ b/www/views/home.html
@@ -2,13 +2,13 @@
   <ion-content class="center">
 
     <a id="scanButton" ng-click='scan()'>
-      <button class="button button-dark">
+      <button class="button button-dark homeButtons">
         Scan
       </button>
     </a>
 
     <a id="productsButton" href="#/products">
-      <button class="button button-dark">
+      <button class="button button-dark homeButtons">
         View Products
       </button>
     </a>
