Cleaned up navbar

--- a/www/views/addproduct.html
+++ b/www/views/addproduct.html
@@ -1,7 +1,5 @@
 <!-- <ion-view view-title="Add Product"> -->
-<ion-view cache-view="false">
-  <!-- <ion-nav-title>
-  </ion-nav-title> -->
+<ion-view cache-view="false" view-title="Product">
   <ion-content>
 
     <div class="list">
