--- a/www/views/home.html
+++ b/www/views/home.html
@@ -1,11 +1,15 @@
-<ion-view view-title="Home">
+<ion-view view-title="myScan">
   <ion-content class="center">
+
+    <img src="../img/barcode.png" id="scanImage">
 
     <a id="scanButton" ng-click='scan()'>
       <button class="button button-dark homeButtons">
         Scan
       </button>
     </a>
+
+    <img src="../img/list.png" id="listImage">
 
     <a id="productsButton" href="#/products">
       <button class="button button-dark homeButtons">
