--- a/www/views/updateproduct.html
+++ b/www/views/updateproduct.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false" view-title="Add Product">
+<ion-view cache-view="false" view-title="Update Product">
   <ion-content>
 
     <div class="list">
@@ -17,9 +17,9 @@
     </div>
 
     <div class="center">
-      <a id="addProductButton" ng-click='addProductPressed()'>
+      <a id="addProductButton" ng-click='updateProductPressed()'>
         <button class="button button-dark" id="productButton">
-          Add
+          Update
         </button>
       </a>
     </div>
