--- a/www/views/addproduct.html
+++ b/www/views/addproduct.html
@@ -1,4 +1,8 @@
 <ion-view cache-view="false" view-title="Add Product">
+  <ion-nav-buttons side="left">
+        <a class="button icon-left ion-chevron-left button-clear button-dark homeButton" href="#/home">Home</a>
+        <!-- <button class="button icon-left ion-home">Home</button> -->
+    </ion-nav-buttons>
   <ion-content>
 
     <div class="list">
