--- a/www/views/updateproduct.html
+++ b/www/views/updateproduct.html
@@ -1,4 +1,7 @@
 <ion-view cache-view="false" view-title="Update Product">
+  <ion-nav-buttons side="left">
+        <a class="button icon-left ion-chevron-left button-clear button-dark homeButton" href="#/viewproducts">Products</a>
+    </ion-nav-buttons>
   <ion-content>
 
     <div class="list">
