--- a/www/views/viewproducts.html
+++ b/www/views/viewproducts.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Products">
   <ion-nav-buttons side="left">
-        <a class="button icon-left ion-chevron-left button-clear button-dark" href="#/home" id="homeButton">Home</a>
+        <a class="button icon-left ion-chevron-left button-clear button-dark homeButton" href="#/home">Home</a>
         <!-- <button class="button icon-left ion-home">Home</button> -->
     </ion-nav-buttons>
   <ion-content>
