--- a/www/views/home.html
+++ b/www/views/home.html
@@ -1,7 +1,7 @@
 <ion-view view-title="myScan">
   <ion-content class="center">
 
-    <img src="../img/barcode.png" id="scanImage">
+    <!-- <img src="/img/barcode.png" id="scanImage"> -->
 
     <a id="scanButton" ng-click='scan()'>
       <button class="button button-dark homeButtons">
@@ -9,9 +9,9 @@
       </button>
     </a>
 
-    <img src="../img/list.png" id="listImage">
+    <!-- <img src="/img/list.png" id="listImage"> -->
 
-    <a id="productsButton" href="#/products">
+    <a id="productsButton" href="#/viewproducts">
       <button class="button button-dark homeButtons">
         View Products
       </button>
