--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,18 +1,3 @@
-/* Empty. Add your own CSS if you like */
-#scanButton {
-  display: block;
-  padding:10px;
-  text-decoration: none;
-  text-align: center;
-}
-
-#productsButton {
-  text-align: center;
-  display: block;
-  padding:10px;
-  text-decoration: none;
-}
-
 .homeButton {
   font-weight: 500;
 }
@@ -22,10 +7,13 @@
   text-align: center;
 }
 
-/*#scanButton {
+#scanButton {
   width: 50%;
   display: block;
   margin: auto;
+  margin-bottom: 20%;
+  padding:10px;
+  text-decoration: none;
 }
 
 #scanImage {
@@ -44,7 +32,9 @@
   width: 50%;
   display: block;
   margin: auto;
-}*/
+  padding:10px;
+  text-decoration: none;
+}
 
 
 .center{
